Se actualizan segundo y tercer endpoints para mayor consistencia
